build/log/idf_py_stdout_output_23196
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D "C:\Users\Bob PC\Desktop\Praceprog\ESPProj\i2s_usb2\build\bootloader\esp-idf\esptool_py" && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5.1-2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 "C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/build/bootloader/bootloader.bin""
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/i2s_usb_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/i2s_usb_example_main.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/build/config" -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/main" -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/soc/esp32s3/register -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_rom/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_rom/esp32s3/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_driver_gpio/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_driver_i2s/include -IC:/Espressif/frameworks/esp-idf-v5.5.1-2/components/esp_driver_i2c/include -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/managed_components/espressif__esp_codec_dev/include" -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/managed_components/espressif__esp_codec_dev/interface" -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/managed_components/espressif__esp_codec_dev/device/include" -I"C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/managed_components/espressif__usb_device_uac/include" -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2=." -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1-2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DUSB_DEVICE_UAC_VER_MAJOR=1 -DUSB_DEVICE_UAC_VER_MINOR=2 -DUSB_DEVICE_UAC_VER_PATCH=2 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/i2s_usb_example_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\i2s_usb_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/i2s_usb_example_main.c.obj -c "C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/main/i2s_usb_example_main.c"
C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/main/i2s_usb_example_main.c: In function 'parse_uart_command':
C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/main/i2s_usb_example_main.c:149:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
  149 |         if (vol < 0) vol = 0; if (vol > 100) vol = 100;
      |         ^~
C:/Users/Bob PC/Desktop/Praceprog/ESPProj/i2s_usb2/main/i2s_usb_example_main.c:149:31: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
  149 |         if (vol < 0) vol = 0; if (vol > 100) vol = 100;
      |                               ^~
cc1.exe: some warnings being treated as errors
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
